feat: seed data added for books

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -4,7 +4,7 @@ DB_PORT=5433
 # put local configuration of postgres
 DB_PORT=5433
 DB_HOST=localhost
-DB_NAME=goodreads
+DB_NAME=demo
 DB_USER=postgres
 DB_PASSWORD=hello123
 
