--- a/backend/.env.development
+++ b/backend/.env.development
@@ -2,18 +2,18 @@ PORT=4004
 DB_PORT=5433
 
 # put local configuration of postgres
-DB_PORT=5433
-DB_HOST=localhost
-DB_NAME=demo
-DB_USER=postgres
-DB_PASSWORD=hello123
+# DB_PORT=5433
+# DB_HOST=localhost
+# DB_NAME=demo
+# DB_USER=postgres
+# DB_PASSWORD=hello123
 
-# For docker configuration of postgres
-# DB_PORT=5432
-# DB_HOST=database-layer
-# DB_NAME=dbname
-# DB_USER=dbuser
-# DB_PASSWORD=dbpassword
+For docker configuration of postgres
+DB_PORT=5432
+DB_HOST=database-layer
+DB_NAME=dbname
+DB_USER=dbuser
+DB_PASSWORD=dbpassword
 
 JWT_SECRET=asdfklds
 JWT_EXPIRATION=7200
